src/rules/snapshots/pg_migration_lint__rules__pgm202__tests__drop_cascade_existing_fires.snap
---
source: src/rules/pgm202.rs
expression: findings
---
- rule_id: PGM202
  severity: Major
  message: "DROP TABLE CASCADE on 'customers' will silently drop dependent objects. Views, triggers, and rules referencing this table are not tracked by the catalog and may also be affected."
  file: migrations/010.sql
  start_line: 1
  end_line: 1
